--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,27 @@
 body {
-  padding-top: 50px;
   padding-bottom: 20px;
 }
 
 ul.nav, .jumbotron h1 {
 	font-family: 'Arvo', courier, serif;
 }
+
+footer {
+  background-color: #f74c3c;
+  padding-top: 150px;
+  padding-bottom: 30px;
+  position: relative;
+}<em><br></em>
+
+#back-to-top {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}<br>
+
+#back-to-top a{
+  color: #333;
+}<br>
 
 #get-involved {
   background-color: #f5f5f5;
@@ -28,6 +44,25 @@ ul.nav, .jumbotron h1 {
   padding: 0 50px;
 }
 
+.modal-content iframe {
+  margin-top: 15px;
+  margin-bottom: 10px;
+}<em><br></em>
+
+.modal-content button.close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  background-color: white;
+  font-size: 28px;
+  width: 30px;
+  opacity: 1;
+  border-radius: 24px;
+  -webkit-border-radius: 24px;
+  -moz-border-radius: 24px;
+}
+<br>
+
 .btn-lg {
   font-size: 36px;
 }
@@ -43,9 +78,6 @@ ul.nav, .jumbotron h1 {
   width: 150px;
   margin-top: 15px;
 }
-
-
-
 
 .homepage {
   text-align: center;
